xx yyy 2007: 0.3.8 Miek <miek@miek.nl>
  -- xxx --


11 Feb 2007: 0.3.7 Miek <miek@miek.nl>
  -- bugfixes --
   * removed @datarootdir@ as this gives errors with older
     autoconf versions (reported by Jelte Jansen)
   * rdup-snap: when removing, look at the type, and if it's
     a dir use rmtree, otherwise unlink
   * Add -E option to all utilities (reported by Jörg Rüppel)
   * Fix -e in rdup-snapshot and rdup-dump
   * removed spec file from distribution - there are multiple
     spec files to be found on the internet

26 Jan 2007: 0.3.6 Miek <miek@miek.nl>
  -- minor bugfixes --
   * Small fixes for rdup-dump (Fabio Rossi)
   * sh-wrappers: print the unknown option when encountering one
   * gfunc.c: write remaining bytes when cutting of growing 
     files in a remote backup
   * Use DEcrypt and gUNzip when restoring
   * Added (local) locking in the shell wrapper tools
   * Allow control-C when reading the filelist file
   * When using /dev/null as filelist file, don't complain
     about not being able to ftruncate it
   * Always use our own getdelim() implementation
   * pl-tools: add warning when not being able to close a file
   * Fixes from rdup-snap ported to rdup-mirror


27 Dec 2006: 0.3.5 Miek <miek@miek.nl>
  -- minor features added --
   * Added '-E file' option, with which you can give rdup an exlude
     list. This list contains extended POSIX regular expressions. See
     rdup(8) for more info.
   * Add -E to rdup-dump and rdup-snapshot 
   * Remove rdup-grep, as most functionality can be achieved with -E
   * Added rpm from: http://www.sisyphus.ru/srpm/rdup/spec
   * Add patch from Fabio Rossi to rdup-mirror, this add -u switch
     which makes rdup-mirror not create any date-directories.
   * Completely rewrite rdup-restore, it now uses rdup-cp and rdup
     to restore. Restores for rdup-snapshot added.
   * Documentation fixes
	

15 Dec 2006: 0.3.4 Miek <miek@miek.nl>
  -- bug fix release --