@@ -106,10 +106,6 @@ shift $((OPTIND - 1))
 
 if [[ ${1:0:1} == "+" ]]; then
         DAYS=${1:1}
-        if [[ ! $DAYS =~ "[0-9]{${#DAYS}}" ]]; then
-                _echo2 "+N needs to be a number [1..99]"
-                exit 1
-        fi
         if [[ $DAYS -lt 1 || $DAYS -gt 99 ]]; then
                 _echo2 "+N needs to be a number [1..99]"
                 exit 1
